# url-normalize

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  upstream-check.yml
src/: data_url.rs  encode.rs  lib.rs  options.rs  path.rs  query.rs  url_parser.rs
tests/: js_parity_test.rs  normalize_url_tests.rs
tests/js_bridge/: actual_test.mjs  package-lock.json  package.json  parity_test.mjs  rust_wrapper.mjs
